--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="media/ILSPOT_PNG_NEGRO.png" alt="Logo del restaurante" class="logo-img">
+                <img src="media/ILSPOT_PNG_NEGRO.png" alt="Logo del restaurante">
             </div>
             <button class="menu-toggle" aria-label="Abrir menú">&#9776;</button>
             <nav class="menu">
