--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             <button class="menu-toggle" aria-label="Abrir menú">&#9776;</button>
             <nav class="menu">
-                <a href="#Menu" class="scroll-link">Menu</a>
+                <a href="#Menu" class="scroll-link">Menú</a>
                 <a href="#HorarioDetalles" class="scroll-link">Horario y detalles</a>
                 <a href="#Imagenes" class="scroll-link">Fotos</a>
                 <a href="#Ubicacion" class="scroll-link">Contacto y ubicación</a>
